--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript; choose one of the two! -->
+    <div class="container mt-5">
+      <h1>Hello, world!</h1>
+      <div class="row"></div>
+      <div class="col">
+        <div class="card">
+          <div class="card-header bg-dark text-light">
+            <h1>Test</h1>
+          </div>
+          <div class="card-body bg-secondary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aspernatur similique nisi repellendus provident? Quisquam deserunt
+            quidem quia accusamus a quam magnam quasi veritatis, ipsa unde? Aliquid cum corrupti quos.
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
