--- a/index.html
+++ b/index.html
@@ -27,6 +27,80 @@
       </div>
     </div>
 
+    <section class="table-boot py-5">
+      <div class="container">
+        <table class="table table-striped table-dark table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td colspan="2">Larry the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <section class="test">
+      <div class="container">
+        <form>
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="1" placeholder="Votre email">
+              </div>
+              <div class="mb-3">
+                <label for="2" class="form-label">Nom</label>
+                <input type="text" class="form-control" id="2" placeholder="Votre nom">
+              </div>
+              <div class="mb-3">
+                <label for="3" class="form-label">Mot de passe</label>
+                <input type="password" class="form-control" id="3" placeholder="Votre mot de passe">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="formFile" class="form-label">Default file input example</label>
+                <input class="form-control" type="file" id="formFile">
+              </div>
+            </div>
+              <div class="col-6">
+                <label for="select" class="form-label">Faites un choix</label>
+                <select class="form-select" aria-label="Default select example" id="select">
+                  <option selected>Open this select menu</option>
+                  <option value="1">One</option>
+                  <option value="2">Two</option>
+                  <option value="3">Three</option>
+                </select>
+              </div>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
